# rodin-api-mcp

./: pyproject.toml
src/rodin_mcp/: rodin.py
