[project]
name = "rodin-api-mcp"
version = "0.1.0"
description = "Exposing Deemos's Rodin API as MCP server"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "mcp[cli]==1.6.0",
    "pydantic==2.11.3",
]

[project.scripts]
rodin-api-mcp = "rodin_mcp.rodin:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
rodin_mcp = ["*.json"]
